[gd_scene load_steps=8 format=3 uid="uid://oqfscqppigqu"]

[ext_resource type="Texture2D" uid="uid://b53a3txhsjsec" path="res://mainmenu/backgroundimage.png" id="1_fgnwx"]
[ext_resource type="Script" uid="uid://5sgx0xu1ixtr" path="res://mainmenu/options.gd" id="1_rq453"]
[ext_resource type="Texture2D" uid="uid://bfdi4mrqgfobc" path="res://mainmenu/button_pressed.png" id="3_ndsii"]
[ext_resource type="Texture2D" uid="uid://d10blkakyfdag" path="res://mainmenu/button_hover.png" id="4_hy6qy"]
[ext_resource type="Texture2D" uid="uid://b6xj0jkae86mn" path="res://mainmenu/button_normal.png" id="4_ndsii"]
[ext_resource type="FontFile" uid="uid://bqeud2wafhg81" path="res://mainmenu/Kenney Mini Square.ttf" id="5_3pdj0"]
[ext_resource type="FontFile" uid="uid://d1m1t468j375t" path="res://mainmenu/Kenney Pixel Square.ttf" id="5_hy6qy"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rq453")

[node name="Backgroundimage" type="Sprite2D" parent="."]
modulate = Color(0.439049, 0.439049, 0.439049, 1)
position = Vector2(576.785, 319.975)
rotation = -0.0305912
scale = Vector2(1.44363, 1.28039)
texture = ExtResource("1_fgnwx")

[node name="ButtonNormal" type="Sprite2D" parent="."]
position = Vector2(577, 236)
scale = Vector2(0.769726, 0.555556)
texture = ExtResource("4_ndsii")

[node name="ButtonNormal" type="Sprite2D" parent="ButtonNormal"]
position = Vector2(7.39098e-06, 257.4)
texture = ExtResource("4_ndsii")

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 593.0
offset_right = 649.0
offset_bottom = 809.0
scale = Vector2(0.184991, 0.162321)
texture_normal = ExtResource("4_ndsii")
texture_pressed = ExtResource("3_ndsii")
texture_hover = ExtResource("4_hy6qy")

[node name="Label2" type="Label" parent="BackButton"]
layout_mode = 0
offset_left = 160.682
offset_top = 32.3369
offset_right = 460.682
offset_bottom = 335.337
theme_override_fonts/font = ExtResource("5_3pdj0")
theme_override_font_sizes/font_size = 120
text = "Back
"

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 12.0
offset_top = 12.0
offset_right = 1135.0
offset_bottom = 111.0
grow_horizontal = 2
theme_override_constants/outline_size = -43
theme_override_fonts/font = ExtResource("5_hy6qy")
theme_override_font_sizes/font_size = 32
text = "Options
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 410.0
offset_top = 201.0
offset_right = 748.0
offset_bottom = 502.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Fullscreen"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fullscreen" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Enable Fullsreen"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/Fullscreen" to="." method="_on_fullscreen_toggled"]
